--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id "org.hidetake.swagger.generator" version "2.18.1"
 }
+
+apply from: 'gradle/swagger.gradle'
 
 group = 'com.dinosatrovic'
 version = '0.0.1-SNAPSHOT'
@@ -29,6 +32,7 @@ dependencies {
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
 }
 
 test {
